# fig

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  completions.rs  config.rs  main.rs
