[package]
name = "fig"
version = "0.2.3"
edition = "2024"
description = "That is fig: the stupid file manager"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
libc = "0.2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
open = "5"
